2011-11-12  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/clock_gettime.c (clock_gettime): No need to assign
	result of SYSDEP_GETTIME_CPU to retval.
	* sysdeps/unix/sysv/linux/clock_gettime.c (SYSDEP_GETTIME_CPU): Add
	parameter list to macro.  Remove trailing semicolon.  Adjust users.

	* resolv/getaddrinfo_a.c (getaddrinfo_a): Avoid warning about unused
	variable.

	* sysdeps/ieee754/ldbl-96/e_j0l.c (__ieee754_j0l): Avoid storing
	mantissa words.
	* sysdeps/ieee754/ldbl-96/e_j1l.c (__ieee754_j1l): Likewise.

	* sysdeps/ieee754/ldbl-96/e_hypotl.c (__ieee754_hypotl): Avoid warning
	from unused variable.

	* sysdeps/generic/sysdep.h: Clean up, pretty print, use dwarf2.h for
	DWARF definitions.
	* sysdeps/generic/dwarf2.h: Don't define enums when using the file
	for assembling.

	* elf/dl-iteratephdr.c [!SHARED] (__dl_iterate_phdr): Don't iterate
	over namespaces.

	* sunrpc/rpc_prot.c (rejected): Fix case value.

	* sysdeps/unix/sysv/linux/internal_statvfs.c (INTERNAL_STATVFS): Use
	unsigned long long int to avoid warnings in shift.

	* posix/regex_internal.c (re_string_reconstruct): Actually use result
	of use of trans.
	* posix/regex_internal.h (re_string_wchar_at): Remove temporary
	variable tmp.

	* sysdeps/i386/i686/multiarch/wcscmp-c.c: Avoid warning.
	* sysdeps/i386/i686/multiarch/wcslen-c.c: Likewise.
	* sysdeps/i386/i686/multiarch/wmemcmp-c.c: Likewise.

	* nis/nis_table.c (nis_list): Use variable of correct type for
	result of __follow_path call.

2011-11-07  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/math_private.h: Using inline assembly version
	of math functions ceil, trunc, floor, round, and sqrt, when
	avaliable on the platform.
	* sysdeps/powerpc/fpu/e_sqrt.c: Undefine __ieee754_sqrt to avoid
	name clash.
	* sysdeps/powerpc/fpu/e_sqrtf.c: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/e_sqrt.c: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/e_sqrtf.c: Likewise.

2011-10-30  Marek Polacek  <mpolacek@redhat.com>
